src/snapshots/bminor__parser__test__parse_binary_expression-3.snap
---
source: src/parser.rs
expression: "parse_expression(\"1 % 4\")"
---
Binary {
    left: Literal {
        value: Token {
            kind: IntegerLiteral,
            lexeme: "1",
            line: 0,
        },
    },
    operator: Token {
        kind: Modulo,
        lexeme: "%",
        line: 0,
    },
    right: Literal {
        value: Token {
            kind: IntegerLiteral,
            lexeme: "4",
            line: 0,
        },
    },
}
