src/snapshots/bminor__parser__test__parse_comparison_expression-5.snap
---
source: src/parser.rs
expression: "parse_expression(\"a < b\")"
---
Boolean {
    expression: Binary {
        left: Variable {
            name: Token {
                kind: Identifier,
                lexeme: "a",
                line: 0,
            },
        },
        operator: Token {
            kind: Less,
            lexeme: "<",
            line: 0,
        },
        right: Variable {
            name: Token {
                kind: Identifier,
                lexeme: "b",
                line: 0,
            },
        },
    },
}
