src/snapshots/bminor__parser__test__parse_comparison_expression-7.snap
---
source: src/parser.rs
expression: "parse_expression(\"a <= b == c\")"
---
Boolean {
    expression: Binary {
        left: Boolean {
            expression: Binary {
                left: Variable {
                    name: Token {
                        kind: Identifier,
                        lexeme: "a",
                        line: 0,
                    },
                },
                operator: Token {
                    kind: LessEqual,
                    lexeme: "<=",
                    line: 0,
                },
                right: Variable {
                    name: Token {
                        kind: Identifier,
                        lexeme: "b",
                        line: 0,
                    },
                },
            },
        },
        operator: Token {
            kind: EqualEqual,
            lexeme: "==",
            line: 0,
        },
        right: Variable {
            name: Token {
                kind: Identifier,
                lexeme: "c",
                line: 0,
            },
        },
    },
}
