src/snapshots/bminor__parser__test__parse_exponent_expression-2.snap
---
source: src/parser.rs
expression: expression
---
Exponent {
    base: Grouping {
        expression: Unary {
            operator: Token {
                kind: Minus,
                lexeme: "-",
                line: 0,
            },
            value: Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
            },
        },
    },
    power: Grouping {
        expression: Unary {
            operator: Token {
                kind: PlusPlus,
                lexeme: "++",
                line: 0,
            },
            value: Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "x",
                    line: 0,
                },
            },
        },
    },
}
